--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      font-family: 'Minecraft', Arial, sans-serif;
+      font-family: 'Minecraft', Minecraft, Arial, sans-serif;
       color: white;
       overflow-x: hidden;
       scroll-behavior: smooth;
@@ -722,3 +722,4 @@ fetch(`https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&channelId=${C
 window.addEventListener('DOMContentLoaded', fetchLatestVideos);
 </script>
 </html>
+
